--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-timestream-write": "^3.700.0",
+    "ajv": "^8.17.1",
     "aws-sdk": "^2.1692.0",
     "uuid": "^13.0.0"
   },
